--- a/liste-naissance.html
+++ b/liste-naissance.html
@@ -39,12 +39,15 @@
     </header>
 
         <main>
-            <section id="vignette_block">
+
+            <!-- Premier tableau  -->
+
+            <section class="vignette_block">
                 <article id="lign_block_1">
                     <table class="table_template" id="t01">
                         <caption>Nos idées utiles pour votre liste de naissance</caption> 
                         <thead>
-                            <tr id="nom_tr">
+                            <tr class="nom_tr">
                                 <th><h2>Poussette crosswalk Nomads</h2</td>  
                                 <th><h2>Bonnet maille bleu pascal prématuré</h2</td>
                                 <th><h2>Siège-auto gr2/3 SOLUTION Z I-FIX Deep Black</h2</td>
@@ -52,25 +55,25 @@
                             </tr>
                         </thead>
                         <tbody>
-                             <tr id="img_tr">
+                             <tr class="img_tr">
                                 <td><div><img src="media/Cross_walk_rouge.jpg" alt="Pousette"></div></td>
                                 <td><div><img src="media/bonnet_maille_bleu.jpg" alt="Bonnet_maille_bleu"></div></td>
                                 <td><div><img src="media/Siège_auto_1.jpg" alt="Siège_auto_1"></div></td>
                                 <td><div><img src="media/hochet_1.jpg" alt="hochet_alice"></div></td>
                             </tr> 
-                            <tr id="categorie_tr">
+                            <tr class="categorie_tr">
                                 <td><h3>Pousette</h3></td>
                                 <td><h3>Vêtements bébé</h3></td>
                                 <td><h3>Siège Auto</h3></td>
                                 <td><h3>Éveil</h3></td>
                             </tr>
-                            <tr id="detail_tr">
+                            <tr class="detail_tr">
                                 <td><p class="description_p">La poussette Crosswalk R est spécialement conçue pour faire de longues promenades avec votre bébé et le protéger à tout moment</p></td>
-                                <td><p class="description_p"></p></td>
+                                <td><p class="description_p">Un joli bonnet pour tenir la tête de bébé bien au chaud dès la naissance</p></td>
                                 <td><p class="description_p">Groupe 2/3, 15 - 36 kg, de 3 à 12 ans environ. Une solution remarquable s'ajustant aux besoins de votre enfant.</p></td>
                                 <td><p class="description_p">Hochet de dentition à l'effigie d'Alice la renarde pour soulager les poussées dentaires de bébé.</p></td>
                             </tr>
-                            <tr id="link_tr">
+                            <tr class="link_tr">
                                 <td><p class="prix_p">459.99€</p><a href="https://www.bebe9.com/poussette-crosswalk-nomads.html"><p class="link_p">https://www.bebe9.com</p></a></td>
                                 <td><p class="prix_p">6.99€</p><a href="https://www.bebe9.com/poussette-crosswalk-nomads.html"><p class="link_p">https://www.bebe9.com</p></a></td>  
                                 <td><p class="prix_p">239,99€</p><a href="https://www.bebe9.com/siege-auto-gr2-3-solution-z-i-fix-deep-black.html"><p class="link_p">https://www.bebe9.com</p></a></td> 
@@ -78,7 +81,58 @@
                             </tr>
                         </tbody>
                         <tfoot>
-                            <tr id="button_tr">
+                            <tr class="button_tr">
+                                <td><input class="urgent" type="button" onclick="window.location.href = 'formulaire.html'; "value="Urgent !"></td>
+                                <td><input class="alreadys" type="button" value="Déjà sélectionné"></td>  
+                                <td><input class="alreadyb" type="button" value="Déjà offert"></td>
+                                <td><input class="regular" type="button" onclick="window.location.href = 'formulaire.html'; "value="Offrir"></td>
+                            </tr>
+                        </tfoot>
+                    </table>
+                </article>
+            </section>
+
+            <!-- Deuxième tableau -->
+
+            <section class="vignette_block">
+                <article id="lign_block_2">
+                    <table class="table_template" id="t02">
+                        <thead>
+                            <tr class="nom_tr">
+                                <th><h2>Poussette crosswalk Nomads</h2</td>  
+                                <th><h2>Bonnet maille bleu pascal prématuré</h2</td>
+                                <th><h2>Siège-auto gr2/3 SOLUTION Z I-FIX Deep Black</h2</td>
+                                <th><h2>Hochet de dentition Alice</h2</td>
+                            </tr>
+                        </thead>
+                        <tbody>
+                             <tr class="img_tr">
+                                <td><div><img src="media/Cross_walk_rouge.jpg" alt="Pousette"></div></td>
+                                <td><div><img src="media/bonnet_maille_bleu.jpg" alt="Bonnet_maille_bleu"></div></td>
+                                <td><div><img src="media/Siège_auto_1.jpg" alt="Siège_auto_1"></div></td>
+                                <td><div><img src="media/hochet_1.jpg" alt="hochet_alice"></div></td>
+                            </tr> 
+                            <tr class="categorie_tr">
+                                <td><h3>Pousette</h3></td>
+                                <td><h3>Vêtements bébé</h3></td>
+                                <td><h3>Siège Auto</h3></td>
+                                <td><h3>Éveil</h3></td>
+                            </tr>
+                            <tr class="detail_tr">
+                                <td><p class="description_p">La poussette Crosswalk R est spécialement conçue pour faire de longues promenades avec votre bébé et le protéger à tout moment</p></td>
+                                <td><p class="description_p">Un joli bonnet pour tenir la tête de bébé bien au chaud dès la naissance</p></td>
+                                <td><p class="description_p">Groupe 2/3, 15 - 36 kg, de 3 à 12 ans environ. Une solution remarquable s'ajustant aux besoins de votre enfant.</p></td>
+                                <td><p class="description_p">Hochet de dentition à l'effigie d'Alice la renarde pour soulager les poussées dentaires de bébé.</p></td>
+                            </tr>
+                            <tr class="link_tr">
+                                <td><p class="prix_p">459.99€</p><a href="https://www.bebe9.com/poussette-crosswalk-nomads.html"><p class="link_p">https://www.bebe9.com</p></a></td>
+                                <td><p class="prix_p">6.99€</p><a href="https://www.bebe9.com/poussette-crosswalk-nomads.html"><p class="link_p">https://www.bebe9.com</p></a></td>  
+                                <td><p class="prix_p">239,99€</p><a href="https://www.bebe9.com/siege-auto-gr2-3-solution-z-i-fix-deep-black.html"><p class="link_p">https://www.bebe9.com</p></a></td> 
+                                <td><p class="prix_p">9,99€</p><a href="https://www.bebe9.com/hochet-de-dentition-alice.html"><p class="link_p">https://www.bebe9.com</p></a></td>
+                            </tr>
+                        </tbody>
+                        <tfoot>
+                            <tr class="button_tr">
                                 <td><input class="urgent" type="button" onclick="window.location.href = 'formulaire.html'; "value="Urgent !"></td>
                                 <td><input class="alreadys" type="button" value="Déjà sélectionné"></td>  
                                 <td><input class="alreadyb" type="button" value="Déjà offert"></td>
@@ -89,6 +143,59 @@
                 </article>
             </section>
         </main>
+
+        <!-- troisième tableau -->
+
+        <section class="vignette_block">
+            <article id="lign_block_1">
+                <table class="table_template" id="t01">
+                    <thead>
+                        <tr class="nom_tr">
+                            <th><h2>Poussette crosswalk Nomads</h2</td>  
+                            <th><h2>Bonnet maille bleu pascal prématuré</h2</td>
+                            <th><h2>Siège-auto gr2/3 SOLUTION Z I-FIX Deep Black</h2</td>
+                            <th><h2>Hochet de dentition Alice</h2</td>
+                        </tr>
+                    </thead>
+                    <tbody>
+                         <tr class="img_tr">
+                            <td><div><img src="media/Cross_walk_rouge.jpg" alt="Pousette"></div></td>
+                            <td><div><img src="media/bonnet_maille_bleu.jpg" alt="Bonnet_maille_bleu"></div></td>
+                            <td><div><img src="media/Siège_auto_1.jpg" alt="Siège_auto_1"></div></td>
+                            <td><div><img src="media/hochet_1.jpg" alt="hochet_alice"></div></td>
+                        </tr> 
+                        <tr class="categorie_tr">
+                            <td><h3>Pousette</h3></td>
+                            <td><h3>Vêtements bébé</h3></td>
+                            <td><h3>Siège Auto</h3></td>
+                            <td><h3>Éveil</h3></td>
+                        </tr>
+                        <tr class="detail_tr">
+                            <td><p class="description_p">La poussette Crosswalk R est spécialement conçue pour faire de longues promenades avec votre bébé et le protéger à tout moment</p></td>
+                            <td><p class="description_p">Un joli bonnet pour tenir la tête de bébé bien au chaud dès la naissance</p></td>
+                            <td><p class="description_p">Groupe 2/3, 15 - 36 kg, de 3 à 12 ans environ. Une solution remarquable s'ajustant aux besoins de votre enfant.</p></td>
+                            <td><p class="description_p">Hochet de dentition à l'effigie d'Alice la renarde pour soulager les poussées dentaires de bébé.</p></td>
+                        </tr>
+                        <tr class="link_tr">
+                            <td><p class="prix_p">459.99€</p><a href="https://www.bebe9.com/poussette-crosswalk-nomads.html"><p class="link_p">https://www.bebe9.com</p></a></td>
+                            <td><p class="prix_p">6.99€</p><a href="https://www.bebe9.com/poussette-crosswalk-nomads.html"><p class="link_p">https://www.bebe9.com</p></a></td>  
+                            <td><p class="prix_p">239,99€</p><a href="https://www.bebe9.com/siege-auto-gr2-3-solution-z-i-fix-deep-black.html"><p class="link_p">https://www.bebe9.com</p></a></td> 
+                            <td><p class="prix_p">9,99€</p><a href="https://www.bebe9.com/hochet-de-dentition-alice.html"><p class="link_p">https://www.bebe9.com</p></a></td>
+                        </tr>
+                    </tbody>
+                    <tfoot>
+                        <tr class="button_tr">
+                            <td><input class="urgent" type="button" onclick="window.location.href = 'formulaire.html'; "value="Urgent !"></td>
+                            <td><input class="alreadys" type="button" value="Déjà sélectionné"></td>  
+                            <td><input class="alreadyb" type="button" value="Déjà offert"></td>
+                            <td><input class="regular" type="button" onclick="window.location.href = 'formulaire.html'; "value="Offrir"></td>
+                        </tr>
+                    </tfoot>
+                </table>
+            </article>
+        </section>
+
+        <!-- Footer -->
 
         <footer id="footer">
             <section id="ft_pin">
