--- a/liste-naissance.html
+++ b/liste-naissance.html
@@ -144,7 +144,7 @@
             </section>
         </main>
 
-        <!-- troisième tableau -->
+        <!-- Troisième tableau -->
 
         <section class="vignette_block">
             <article id="lign_block_1">
@@ -194,6 +194,10 @@
                 </table>
             </article>
         </section>
+
+        <nav id="formulaire_nav">
+            <input id="formulaire_bt" type="button" onclick="window.location.href = 'formulaire.html'; "value="Commencer vos achats">
+        </nav>
 
         <!-- Footer -->
 
