--- a/liste-naissance.html
+++ b/liste-naissance.html
@@ -159,7 +159,7 @@
                     </thead>
                     <tbody>
                          <tr class="img_tr">
-                            <td><div><img src="media/Cross_walk_rouge.jpg" alt="Pousette"></div></td>
+                            <td><div><img src="media/Cross_walk_rouge.jpg" alt="Poussette"></div></td>
                             <td><div><img src="media/bonnet_maille_bleu.jpg" alt="Bonnet_maille_bleu"></div></td>
                             <td><div><img src="media/Siège_auto_1.jpg" alt="Siège_auto_1"></div></td>
                             <td><div><img src="media/hochet_1.jpg" alt="hochet_alice"></div></td>
@@ -196,7 +196,7 @@
         </section>
 
         <nav id="formulaire_nav">
-            <input id="formulaire_bt" type="button" onclick="window.location.href = 'formulaire.html'; "value="Commencer vos achats">
+            <input id="formulaire_bt" type="button" onclick="window.location.href = 'formulaire.html'; "value="Ajouter un objet à la liste">
         </nav>
 
         <!-- Footer -->
