--- a/liste-naissance.html
+++ b/liste-naissance.html
@@ -70,8 +70,8 @@
                             <tr class="detail_tr">
                                 <td><p class="description_p">La poussette Crosswalk R est spécialement conçue pour faire de longues promenades avec votre bébé et le protéger à tout moment</p></td>
                                 <td><p class="description_p">Un joli bonnet pour tenir la tête de bébé bien au chaud dès la naissance</p></td>
-                                <td><p class="description_p">Groupe 2/3, 15 - 36 kg, de 3 à 12 ans environ. Une solution remarquable s'ajustant aux besoins de votre enfant.</p></td>
-                                <td><p class="description_p">Hochet de dentition à l'effigie d'Alice la renarde pour soulager les poussées dentaires de bébé.</p></td>
+                                <td><p class="description_p">Groupe 2/3, 15 - 36 kg, de 3 à 12 ans environ. Une solution remarquable s'ajustant aux besoins de votre enfant</p></td>
+                                <td><p class="description_p">Hochet de dentition à l'effigie d'Alice la renarde pour soulager les poussées dentaires de bébé</p></td>
                             </tr>
                             <tr class="link_tr">
                                 <td><p class="prix_p">459.99€</p><a href="https://www.bebe9.com/poussette-crosswalk-nomads.html"><p class="link_p">https://www.bebe9.com</p></a></td>
@@ -99,44 +99,44 @@
                     <table class="table_template" id="t02">
                         <thead>
                             <tr class="nom_tr">
-                                <th><h2>Poussette crosswalk Nomads</h2</td>  
-                                <th><h2>Bonnet maille bleu pascal prématuré</h2</td>
-                                <th><h2>Siège-auto gr2/3 SOLUTION Z I-FIX Deep Black</h2</td>
-                                <th><h2>Hochet de dentition Alice</h2</td>
+                                <th><h2>Poussette Kendo Squared</h2</td>  
+                                <th><h2>Siege auto gr0+ GEMM Chromium</h2</td>
+                                <th><h2>Coffret naissance Éveil des sens Rose</h2</td>
+                                <th><h2>Moufles P'tit Moussaillon</h2</td>
                             </tr>
                         </thead>
                         <tbody>
                              <tr class="img_tr">
-                                <td><div><img src="media/Cross_walk_rouge.jpg" alt="Pousette"></div></td>
-                                <td><div><img src="media/bonnet_maille_bleu.jpg" alt="Bonnet_maille_bleu"></div></td>
-                                <td><div><img src="media/Siège_auto_1.jpg" alt="Siège_auto_1"></div></td>
-                                <td><div><img src="media/hochet_1.jpg" alt="hochet_alice"></div></td>
+                                <td><div><img src="media/KENDO_SQUARED.jpg" alt="Pousette_kendo"></div></td>
+                                <td><div><img src="media/Siège_auto_2.jpg" alt="Siege_auto_2"></div></td>
+                                <td><div><img src="media/eveil_2.jpg" alt="eveil_2"></div></td>
+                                <td><div><img src="media/moufle_1.jpg" alt=""></div></td>
                             </tr> 
                             <tr class="categorie_tr">
                                 <td><h3>Pousette</h3></td>
-                                <td><h3>Vêtements bébé</h3></td>
                                 <td><h3>Siège Auto</h3></td>
                                 <td><h3>Éveil</h3></td>
+                                <td><h3>Vêtements bébé</h3></td>
                             </tr>
                             <tr class="detail_tr">
-                                <td><p class="description_p">La poussette Crosswalk R est spécialement conçue pour faire de longues promenades avec votre bébé et le protéger à tout moment</p></td>
-                                <td><p class="description_p">Un joli bonnet pour tenir la tête de bébé bien au chaud dès la naissance</p></td>
-                                <td><p class="description_p">Groupe 2/3, 15 - 36 kg, de 3 à 12 ans environ. Une solution remarquable s'ajustant aux besoins de votre enfant.</p></td>
-                                <td><p class="description_p">Hochet de dentition à l'effigie d'Alice la renarde pour soulager les poussées dentaires de bébé.</p></td>
+                                <td><p class="description_p">Le SUV des poussettes pour rouler sur n’importe quel terrain et vous déplacer facilement grâce à son pliage compact</p></td>
+                                <td><p class="description_p">La coque indispensable, avec option isofix. Ce compagnon malin des poussettes Joie est un petit cocon de sûreté pour les sorties à pieds ou en voiture</p></td>
+                                <td><p class="description_p">Le coffret éveil des sens de VTECH, un coffret naissance avec les premiers jouets incontournables pour bébé</p></td>
+                                <td><p class="description_p">Des moufles toutes douces et chaudes</p></td>
                             </tr>
                             <tr class="link_tr">
-                                <td><p class="prix_p">459.99€</p><a href="https://www.bebe9.com/poussette-crosswalk-nomads.html"><p class="link_p">https://www.bebe9.com</p></a></td>
-                                <td><p class="prix_p">6.99€</p><a href="https://www.bebe9.com/poussette-crosswalk-nomads.html"><p class="link_p">https://www.bebe9.com</p></a></td>  
-                                <td><p class="prix_p">239,99€</p><a href="https://www.bebe9.com/siege-auto-gr2-3-solution-z-i-fix-deep-black.html"><p class="link_p">https://www.bebe9.com</p></a></td> 
-                                <td><p class="prix_p">9,99€</p><a href="https://www.bebe9.com/hochet-de-dentition-alice.html"><p class="link_p">https://www.bebe9.com</p></a></td>
+                                <td><p class="prix_p">369,99€</p><a href="https://www.bebe9.com/poussette-kendo-squared.html"><p class="link_p">https://www.bebe9.com</p></a></td>
+                                <td><p class="prix_p">79,99€</p><a href="https://www.bebe9.com/siege-auto-gr0-gemm-chromium.html"><p class="link_p">https://www.bebe9.com</p></a></td>  
+                                <td><p class="prix_p">25,99€</p><a href="https://www.bebe9.com/coffret-naissance-eveil-des-sens-rose.html"><p class="link_p">https://www.bebe9.com</p></a></td> 
+                                <td><p class="prix_p">4,49€</p><a href="https://www.bebe9.com/moufles-p-tit-moussaillon.html"><p class="link_p">https://www.bebe9.com</p></a></td>
                             </tr>
                         </tbody>
                         <tfoot>
                             <tr class="button_tr">
-                                <td><input class="urgent" type="button" onclick="window.location.href = 'formulaire.html'; "value="Urgent !"></td>
-                                <td><input class="alreadys" type="button" value="Déjà sélectionné"></td>  
                                 <td><input class="alreadyb" type="button" value="Déjà offert"></td>
+                                <td><input class="urgent" type="button" onclick="window.location.href = 'formulaire.html'; "value="Urgent !"></td>
                                 <td><input class="regular" type="button" onclick="window.location.href = 'formulaire.html'; "value="Offrir"></td>
+                                <td><input class="alreadys" type="button" value="Déjà sélectionné"></td>  
                             </tr>
                         </tfoot>
                     </table>
@@ -147,48 +147,48 @@
         <!-- Troisième tableau -->
 
         <section class="vignette_block">
-            <article id="lign_block_1">
-                <table class="table_template" id="t01">
+            <article id="lign_block_3">
+                <table class="table_template" id="t03">
                     <thead>
                         <tr class="nom_tr">
-                            <th><h2>Poussette crosswalk Nomads</h2</td>  
-                            <th><h2>Bonnet maille bleu pascal prématuré</h2</td>
-                            <th><h2>Siège-auto gr2/3 SOLUTION Z I-FIX Deep Black</h2</td>
-                            <th><h2>Hochet de dentition Alice</h2</td>
+                            <th><h2>Chaussettes bébé naissance blanches petit coeur</h2</td>  
+                            <th><h2>Poussette Trolley Me Emerald</h2</td>
+                            <th><h2>Mini doudou Alex l'âne</h2</td>
+                            <th><h2>Siège auto gr0/1 Atmo</h2</td>
                         </tr>
                     </thead>
                     <tbody>
                          <tr class="img_tr">
-                            <td><div><img src="media/Cross_walk_rouge.jpg" alt="Poussette"></div></td>
-                            <td><div><img src="media/bonnet_maille_bleu.jpg" alt="Bonnet_maille_bleu"></div></td>
-                            <td><div><img src="media/Siège_auto_1.jpg" alt="Siège_auto_1"></div></td>
-                            <td><div><img src="media/hochet_1.jpg" alt="hochet_alice"></div></td>
+                            <td><div><img src="media/chausette_1.jpg" alt="chaussette"></div></td>
+                            <td><div><img src="media/poussette_trolley.jpg" alt="pousseyye_trolley"></div></td>
+                            <td><div><img src="media/doudou.jpg" alt="doudou"></div></td>
+                            <td><div><img src="media/Siège_auto3.jpg" alt="siège_auto_3"></div></td>
                         </tr> 
                         <tr class="categorie_tr">
-                            <td><h3>Pousette</h3></td>
                             <td><h3>Vêtements bébé</h3></td>
-                            <td><h3>Siège Auto</h3></td>
+                            <td><h3>Poussette</h3></td>
                             <td><h3>Éveil</h3></td>
+                            <td><h3>Siège Auto</h3></td>
                         </tr>
                         <tr class="detail_tr">
-                            <td><p class="description_p">La poussette Crosswalk R est spécialement conçue pour faire de longues promenades avec votre bébé et le protéger à tout moment</p></td>
-                            <td><p class="description_p">Un joli bonnet pour tenir la tête de bébé bien au chaud dès la naissance</p></td>
-                            <td><p class="description_p">Groupe 2/3, 15 - 36 kg, de 3 à 12 ans environ. Une solution remarquable s'ajustant aux besoins de votre enfant.</p></td>
-                            <td><p class="description_p">Hochet de dentition à l'effigie d'Alice la renarde pour soulager les poussées dentaires de bébé.</p></td>
+                            <td><p class="description_p">Gardez les pieds de bébé au chaud dans cette paire de chaussettes toute douce à revers</p></td>
+                            <td><p class="description_p">Homologuée pour les voyages en cabine, pliage rapide à une main</p></td>
+                            <td><p class="description_p">Le mini doudou Alex le petit âne imaginé par Nattou apporte soutien et réconfort à votre enfant</p></td>
+                            <td><p class="description_p">Siège auto groupe 0/1 Atmo</p></td>
                         </tr>
                         <tr class="link_tr">
-                            <td><p class="prix_p">459.99€</p><a href="https://www.bebe9.com/poussette-crosswalk-nomads.html"><p class="link_p">https://www.bebe9.com</p></a></td>
-                            <td><p class="prix_p">6.99€</p><a href="https://www.bebe9.com/poussette-crosswalk-nomads.html"><p class="link_p">https://www.bebe9.com</p></a></td>  
-                            <td><p class="prix_p">239,99€</p><a href="https://www.bebe9.com/siege-auto-gr2-3-solution-z-i-fix-deep-black.html"><p class="link_p">https://www.bebe9.com</p></a></td> 
-                            <td><p class="prix_p">9,99€</p><a href="https://www.bebe9.com/hochet-de-dentition-alice.html"><p class="link_p">https://www.bebe9.com</p></a></td>
+                            <td><p class="prix_p">4,99€</p><a href="https://www.bebe9.com/chaussettes-bebe-naissance-blanches-petit-coeur.html"><p class="link_p">https://www.bebe9.com</p></a></td>
+                            <td><p class="prix_p">129,99€</p><a href="https://www.bebe9.com/poussette-trolley-me-emerald.html"><p class="link_p">https://www.bebe9.com</p></a></td>  
+                            <td><p class="prix_p">8,39€</p><a href="https://www.bebe9.com/mini-doudou-alex-l-ane.html"><p class="link_p">https://www.bebe9.com</p></a></td> 
+                            <td><p class="prix_p">59,99€</p><a href="https://www.bebe9.com/hochet-de-dentition-alice.html"><p class="link_p">https://www.bebe9.com</p></a></td>
                         </tr>
                     </tbody>
                     <tfoot>
                         <tr class="button_tr">
-                            <td><input class="urgent" type="button" onclick="window.location.href = 'formulaire.html'; "value="Urgent !"></td>
                             <td><input class="alreadys" type="button" value="Déjà sélectionné"></td>  
-                            <td><input class="alreadyb" type="button" value="Déjà offert"></td>
                             <td><input class="regular" type="button" onclick="window.location.href = 'formulaire.html'; "value="Offrir"></td>
+                            <td><input class="urgent" type="button" onclick="window.location.href = 'formulaire.html'; "value="Urgent !"></td>  
+                            <td><input class="alreadyb" type="button" value="Déjà offert"></td> 
                         </tr>
                     </tfoot>
                 </table>
